# BlockLights_VSCode

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.esp32_c6_n4  sdkconfig.old
main/: CMakeLists.txt  autoPacing.cpp  autoPacing.h  blockLightsSettings.cpp  blockLightsSettings.h  blockLightsSetup.cpp  blockLightsSetup.h  idf_component.yml  main.cpp  realTimePacing.cpp  realTimePacing.h  sharedData.cpp  sharedData.h
partition/: autoPacing.html  blockLightsSettings.html  blockLightsSetup.html  blocks.txt  home.html  realTimePacing.html
partition/htmls/: autoPacing.html  blockLightsSettings.html  blockLightsSetup.html
partition/scripts/: autoPacing.js  blockLightsSettings.js  blockLightsSetup.js  realTimePacing.js
partition/styles/: style.css
